[package]
name = "loxwasm"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[package.metadata.wasm-pack.profile.release]
wasm-opt = false

[dependencies]
wasm-bindgen = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde-wasm-bindgen = "0.6"
tsify = "0.5"
loxlang = { path = "../loxlang"}
thiserror.workspace = true
miette = { version = "7", features = [] }
chumsky.workspace = true
